--- a/CIEM/Bilan_CIEM.Rmd
+++ b/CIEM/Bilan_CIEM.Rmd
@@ -21,6 +21,34 @@ dir <- ("/media/hdd/mbuoro/ORE-DiaPFC/")
 year <- 2019
 ```
 
+# Tables for ICES Working Group on North Atlantic Salmon (WGNAS)
+
+Exploitation rate (table 7), Spawning stock, egg deposition and attainment of CLs, (table 8); Juvenile and adult salmon numbers (estim.) in-river return rate (table 9) for the [ORE-DiaPFC](https://www6.inra.fr/diapfc) rivers
+
+# Tables description:  
+
+- Table 7 - Exploitation rate in the river Scorff
+
+- Table 8 - Index rivers :spawning stock and egg deposition and attainment of CLs  
+Nota: For Nivelle r., spawning stock is females only. 
+
+- Table 9 - Juvenile and adult salmon numbers (estim.) in-river return rate in the monitored rivers  
+Nota : juvenile fish are smolts except in r. Nivelle for which they are parrs 0+ (/!\ parr 0+ year is then reported for r. Nivelle). 
+Adult numbers refer to the smolt year N: runs of N+1 and N+2 (/!\ N+2 to N+5 respectively for r. Nivelle according to the river and sea ages of the returning adults of the same cohort; i.e. year of birth).
+These tables are based on wild fish only except for the river Nivelle were juvenile stocking occurred from 1986 to 1995, which contributed to adult returns from 1988 up to 2000.
+
+- Table 10 -  Adult salmon captured (unmarked) at traps in the monitored rivers
+
+# Conservation limits (millions) used: 
+
+- Nivelle: 1.44 
+- Scorff: 0.63 /!\ revised from data in 2016 by Buoro & Prévost (using 3 eggs/m²)
+- Oir: 0.12
+- Bresle: 0.36
+
+
+
+
 ## Table 7 - Exploitation rate in the rivers 
 NB: Scorff only
 
