--- a/Nivelle/Bilan_Nivelle.Rmd
+++ b/Nivelle/Bilan_Nivelle.Rmd
@@ -86,7 +86,7 @@ write.csv( table, con, row.names = FALSE)
 close(con)
 
 library(knitr)
-kable(table, row.names = FALSE, caption = "Tableau bilan pour le Scorff. Seules les valeurs médianes sont reportées")
+kable(table, row.names = FALSE, caption = paste0("Tableau bilan pour le ",site,". Seules les valeurs médianes sont reportées"))
 
 ```
 
