--- a/Oir/Bilan_Oir.Rmd
+++ b/Oir/Bilan_Oir.Rmd
@@ -3,9 +3,10 @@ title: "Bilan_Oir"
 author: "Mathieu Buoro & Etienne Prévost"
 date: "3/12/2020"
 output:
-  word_document: default
+  html_document: 
+    theme: paper
   pdf_document: default
-  html_document: default
+  word_document: default
 ---
 
 ```{r setup, include=FALSE}
