--- a/CIEM/Bilan_CIEM.Rmd
+++ b/CIEM/Bilan_CIEM.Rmd
@@ -1,10 +1,11 @@
 ---
 title: "Bilan_CIEM"
 author: "Mathieu Buoro & Etienne Prévost"
-date: "4/14/2020"
+date: "4/07/2022"
 output:
-  word_document: default
+  pdf_document: default
   html_document: default
+  word_document: default
 ---
 
 ```{r setup, include=FALSE}
@@ -19,8 +20,8 @@ library(knitr)
 # - OIR: chercher les données de surface de production accessible aux spawners dans les données de juvéniles
 # ' Bresle: vérifier tx fecondité et sex-ratio
 
-dir <- ("/media/hdd/mbuoro/ORE-DiaPFC/")
-year <- 2020
+dir <- ("/media/hdd4To/mbuoro/ORE-DiaPFC/")
+year <- 2021
 ```
 
 # Tables for ICES Working Group on North Atlantic Salmon (WGNAS)
